update to fst 0.4

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,11 @@
 [package]
 name = "levenshtein_automata"
 version = "0.1.0"
-authors = ["Paul Masurel <paul.masurel@gmail.com>"]
+authors = ["Paul Masurel <paul.masurel@gmail.com>", "Pascal Seitz <pascal.seitz@gmail.com>"]
+edition = "2018"
 
 [dependencies]
-fst = {version="0.3", optional=true, default-features=false}
+fst = {version="0.4", optional=true, default-features=false}
 
 [dev-dependencies]
 levenshtein = "1.0"
